templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: APP_NAME

spec:
  replicas: REPLICAS

  selector:
    matchLabels:
      app: APP_NAME

  template:
    metadata:
      labels:
        app: APP_NAME

    spec:
      containers:
        - name: APP_NAME
          image: IMAGE
          ports:
            - containerPort: PORT
