templates/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: APP_NAME

spec:
  selector:
    app: APP_NAME

  ports:
    - port: PORT
      targetPort: PORT

  type: ClusterIP
