templates/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: APP_NAME

spec:
  host: HOSTNAME

  to:
    kind: Service
    name: APP_NAME
